--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "node-fetch": "^2.6.9",
     "openai": "^4.14.1",
     "pg": "^8.11.3",
+    "python-shell": "^5.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
